--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,14 +6,17 @@ layout: default
 <div class="section">
     <div class="row">
         <div class="col s12">
-            <div class="card-content">
+            <div class="card-content" style="padding: 20px 0 0 0;">
                 <div class="card-title center-align"><h2 class="thin blue-text">{{ page.title }}</h2></div>
-                <h5 class="center-align grey-text text-darken-1 thin">Published at {{ page.date | date: "%B %-d, %Y" }}</h5>
+                <h5 class="center-align grey-text text-darken-1 thin">Publicado el {{ page.date | date: "%d/%m/%Y" }}</h5>
                 <br/>
                 <div class="divider"></div>
                 <article class="post-categories center-align">
-                    <div class="chip teal white-text">Categories</div>
+                    <div class="chip teal white-text">Categorías</div>
                     {% for cat in page.categories %}<div class="chip">{{ cat }}</div> {% endfor %}
+                </article>
+                <article class="imagen-destacada">
+                  <img class="responsive-img imagen-destacada materialboxed" src={{ page.imageURL }} alt="{{ page.title }}">
                 </article>
                 <article class="grey-text text-darken-2 post-content">
                     {{ content }}
@@ -23,7 +26,7 @@ layout: default
                         {% if site.categories[cat].size > 1 %}
                             <aside class="related">
                                 <ul class="collection with-header">
-                                    <li class="collection-header"><h5 class="light">Related posts in <span class="green-text">{{ cat }}</span> category</h5></li>
+                                    <li class="collection-header"><h5 class="light">Posts relacionados en la categoría <span class="green-text">{{ cat }}</span>.</h5></li>
                             {% for post in site.categories[cat] limit:5 %}
                                 {% if post.title != page.title %}
                                         <a href="{{ post.url }}" class="collection-item avatar">
