--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -82,7 +82,7 @@ article {
           font-weight: 200;
       }
       li {
-        list-style-type: disc;    
+        list-style-type: disc;
       }
       &.on-index {
         padding:0;
@@ -101,3 +101,61 @@ footer.page-footer {
   line-height: 1.5;
   letter-spacing: -0.003em;
  }
+
+ .imagen-destacada {
+  float: none;
+  margin: auto;
+  padding: 25px 0px 15px 0px;
+  max-width: 80%;
+
+  /*float: left;
+  padding: 15px 15px 10px 5px;
+  max-width: 50%;*/
+}
+
+.fetxa-tarjeta {
+  padding-bottom: 5px;
+}
+
+.img-wrap > img {
+  //opacity: 0.9;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.margena-kendu {
+  margin: 0 -15px;
+  //Nabigaziokoa ezkerreta juteko
+}
+
+.marra-horizontala {
+  max-width: 75%;
+  margin: auto;
+  margin-bottom: 5px;
+}
+
+/* Responsive iFrame for the calendar */
+.responsive-iframe-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+.responsive-iframe-container iframe,
+.vresponsive-iframe-container object,
+.vresponsive-iframe-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+//////////////////////////////////////
