--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -141,6 +141,10 @@ footer.page-footer {
   margin-bottom: 5px;
 }
 
+.mobileko-menua {
+  width: 250px;
+}
+
 /* Responsive iFrame for the calendar */
 .responsive-iframe-container {
     position: relative;
