Fixed go to main page button

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
     <div class="container container-large">
     <a class="brand-logo" href="{{ site.baseurl }}/" class="blue-text" style="padding: 0 20px;"><span class="light blue-text">{{ site.logo }}</span></a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="{{ site.baseurl }}" class="blue-text">Novedades</a></li>
+      <li><a href="/" class="blue-text">Novedades</a></li>
       <li><a href="/calendario/" class="blue-text">Calendario</a></li>
       <li><a href="/sobre_nosotros/" class="blue-text">Sobre Nosotros</a></li>
 
