--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -163,6 +163,21 @@ footer.page-footer {
 // Responsive design ////////////////////
 /////////////////////////////////////////
 
+// Media Query Ranges
+$small-screen-up: 601px !default;
+$medium-screen-up: 993px !default;
+$large-screen-up: 1201px !default;
+$small-screen: 600px !default;
+$medium-screen: 992px !default;
+$large-screen: 1200px !default;
+
+$medium-and-up: "only screen and (min-width : #{$small-screen-up})" !default;
+$large-and-up: "only screen and (min-width : #{$medium-screen-up})" !default;
+$small-and-down: "only screen and (max-width : #{$small-screen})" !default;
+$medium-and-down: "only screen and (max-width : #{$medium-screen})" !default;
+$medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width : #{$medium-screen})" !default;
+
+
 @mixin column-count($ct) {
   -webkit-column-count: $ct;
   -moz-column-count: $ct;
@@ -172,11 +187,11 @@ footer.page-footer {
 .cards-container {
   column-break-inside: avoid;
   .card {
-    transform: translateZ();
+    z-index: 5;
     display: inline-block;
     overflow: visible;
-    i {
-      transform: translateZ(0);
+    .material-icons{
+      z-index: 5;
     }
   }
 }
