--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -202,6 +202,9 @@ $medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width 
   }
   .cards-container {
     @include column-count(1);
+    .card {
+      z-index: 5;
+    }
   }
 }
 @media #{$medium-and-up} {
@@ -214,6 +217,9 @@ $medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width 
   }
   .cards-container {
     @include column-count(2);
+    .card {
+      z-index: 5;
+    }
   }
 }
 @media #{$large-and-up} {
@@ -226,6 +232,9 @@ $medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width 
   }
   .cards-container {
     @include column-count(3);
+    .card {
+      z-index: 5;
+    }
   }
 }
 
