Updated carousel with bg images

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -159,6 +159,25 @@ footer.page-footer {
     height: 100%;
 }
 
+#car-one {
+  background: url(http://i.imgur.com/CoMS3RL.jpg) no-repeat center;
+  display: block;
+}
+
+#car-two {
+  background: url(http://i.imgur.com/48GIIAM.jpg) no-repeat center;
+  display: block;
+}
+
+#car-three {
+  background: url(http://i.imgur.com/XWRrLOB.jpg) no-repeat center;
+  display: block;
+}
+
+#car-four {
+  background: url(http://i.imgur.com/CcsFrAB.jpg) no-repeat center;
+  display: block;
+}
 //////////////////////////////////////////
 // Responsive design ////////////////////
 /////////////////////////////////////////
