Optimized calendar spacing

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -137,6 +137,17 @@ footer.page-footer {
   margin-bottom: 5px;
 }
 
+.marra-cal {
+  max-width: 75%;
+  margin: auto;
+  margin-bottom: 25px;
+}
+
+.cal-margin {
+  margin: auto;
+  margin-bottom: 25px;
+}
+
 .mobileko-menua {
   width: 250px;
 }
