Send post form added

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -152,6 +152,14 @@ footer.page-footer {
   width: 250px;
 }
 
+.space-above {
+  margin-top: 75px;
+}
+
+.paddig-sides {
+  padding: 0 2%;
+}
+
 /* Responsive iFrame for the calendar */
 .responsive-iframe-container {
     position: relative;
