--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,6 @@
 </div>
 <div class="footer-copyright">
   <div class="container center-align">
-    NULLPOINTER - 2016
+    © NULLPOINTER - 2016
   </div>
 </div>
