--- a/_layouts/page_cocktails.html
+++ b/_layouts/page_cocktails.html
@@ -16,9 +16,9 @@ layout: default
             <div class="section">
               <div class="row paddig-sides">
                 <div class="space-above card col s12">
-                  <form class="col s12" action="contact.php" method="post">
+                  <form class="col s12" action="../contact.php" method="post">
                     <h3 class="thin blue-text">Envíanos tu post</h3>
-                    <p>En MYO creemos que con la colaboración de todo el mundo podemos lograr los mejores dispositivos y accesorios posibles. Por ello, pedimos tu ayuda desde el principio del proceso de desarrollo. En el formulario inferior puedes enviar tu diseño perfecto junto con tus especificaciones ideales para que dentro de un mes (20/02/2016) podamos hacer público los 10 mejores diseños y funciones más demandadas para que puedas votar y valorar cual prefieres. Además, si tu diseño resulta ganador ¡obtendrás 1000€ de premio más el producto final! Así que ya sabes, no pierdas tiempo y ¡participa!</p>
+                    <p>En UA Party creemos que con la colaboración de todo el mundo podemos lograr que la web siga creciendo y mejorando. Por ello, pedimos tu colaboración. En el formulario inferior puedes enviar tu post para seguir ampliando cualquiera de nuestras secciones, ya sea <em>bares</em>, <em>cócteles</em> o <em>juegos</em>. De esta forma, nuestro equipo podrá valorar el post y añadirla a la web! Además, por cada post enviado entrarás en el sorteo mensual de entradas y otros regalos! Así que ya sabes, no pierdas tiempo y ¡participa!</p>
                     <p>&nbsp;</p>
                     <div class="input-field col s6">
                       <i class="material-icons prefix">account_circle</i>
@@ -27,7 +27,7 @@ layout: default
                     </div>
                     <div class="input-field col s6">
                       <i class="material-icons prefix">email</i>
-                      <input id="email" type="email" class="validate">
+                      <input id="email" name="email" type="email" class="validate">
                       <label for="email" data-error="Incorrecto">Email</label>
                     </div>
                     <div class="input-field col s12">
@@ -36,7 +36,7 @@ layout: default
                       <label for="icon_prefix2">Post</label>
                     </div>
                     <div class="col offset-l9 offset-m8 offset-s7 s5">
-                      <button class="btn waves-effect waves-light red darken-1" type="submit">Enviar
+                      <button class="btn waves-effect waves-light red accent-2" type="submit">Enviar
                         <i class="material-icons prefix right">send</i>
                       </button>
                     </div>
