--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
     {% feed_meta %}
     <link type="text/css" rel="stylesheet" href="{{ "/assets/css/Material-icons.css" | prepend: site.baseurl }}" media="screen,projection">
     <link type="text/css" rel="stylesheet" href="{{ "/assets/css/app.css" | prepend: site.baseurl }}" media="screen,projection">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" media="screen,projection">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- FAVICONS -->
