Social networks Izadi and Alba

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
     <link type="text/css" rel="stylesheet" href="{{ "/assets/css/app.css" | prepend: site.baseurl }}" media="screen,projection">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" media="screen,projection">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link type="text/css" rel="stylesheet" href="{{ "/assets/css/font-awesome.min.css" | prepend: site.baseurl }}" media="screen,projection">
 
     <!-- FAVICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
