Carousel's max-width adjusted

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -160,8 +160,12 @@ footer.page-footer {
   padding: 0 2%;
 }
 
+.container-carousel {
+  margin: auto;
+  max-width: 1920px;
+}
 
-/*Bidaltzekoan kolorek*/
+/* Form Colours */
 
 /* label color */
   .input-field label {
