Moved carousel items into local

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -221,22 +221,22 @@ footer.page-footer {
 }
 
 #car-one {
-  background: url(http://i.imgur.com/CoMS3RL.jpg) no-repeat center;
+  background: url(../img/novedades.jpg) no-repeat center;
   display: block;
 }
 
 #car-two {
-  background: url(http://i.imgur.com/48GIIAM.jpg) no-repeat center;
+  background: url(../img/bares.jpg) no-repeat center;
   display: block;
 }
 
 #car-three {
-  background: url(http://i.imgur.com/XWRrLOB.jpg) no-repeat center;
+  background: url(../img/cocteles.jpg) no-repeat center;
   display: block;
 }
 
 #car-four {
-  background: url(http://i.imgur.com/CcsFrAB.jpg) no-repeat center;
+  background: url(../img/juegos.jpg) no-repeat center;
   display: block;
 }
 //////////////////////////////////////////
