FInally fixed the column grid weird spacing issues and implemented the mini_imageURL system

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@ if(!ob_start("ob_gzhandler")) ob_start();
     <footer class="page-footer no-margin __top blue">
         {% include footer.html %}
     </footer>
-    <script type="text/javascript" src="{{ "/assets/js/jquery.js" | prepend: site.baseurl }}"></script>
-    <script type="text/javascript" src="{{ "/assets/js/materialize.js" | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ "/assets/js/jquery-3.1.1.min.js" | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ "/assets/js/materialize.min.js" | prepend: site.baseurl }}"></script>
     <script type="text/javascript">
     $(function() {
 
