--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -243,29 +243,16 @@ footer.page-footer {
 // Responsive design ////////////////////
 /////////////////////////////////////////
 
-// Media Query Ranges
-$small-screen-up: 601px !default;
-$medium-screen-up: 993px !default;
-$large-screen-up: 1201px !default;
-$small-screen: 600px !default;
-$medium-screen: 992px !default;
-$large-screen: 1200px !default;
 
-$medium-and-up: "only screen and (min-width : #{$small-screen-up})" !default;
-$large-and-up: "only screen and (min-width : #{$medium-screen-up})" !default;
-$small-and-down: "only screen and (max-width : #{$small-screen})" !default;
-$medium-and-down: "only screen and (max-width : #{$medium-screen})" !default;
-$medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width : #{$medium-screen})" !default;
-
-
-@mixin column-count($ct) {
+/*@mixin column-count($ct) {
   -webkit-column-count: $ct;
   -moz-column-count: $ct;
   column-count: $ct;
-}
+}*/
 
 .cards-container {
   column-break-inside: avoid;
+  margin: auto;
   .card {
     display: inline-block;
     overflow: visible;
@@ -277,12 +264,15 @@ $medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width 
     width: 75%;
   }
   .cards-container {
-    @include column-count(1);
+    -webkit-column-count: 1; /* Chrome, Safari, Opera */
+    -moz-column-count: 1; /* Firefox */
+    column-count: 1;
     .card {
-      z-index: 5;
+      width: 100%;
     }
   }
 }
+
 @media #{$medium-and-up} {
   .container {
     width: 75%;
@@ -292,12 +282,12 @@ $medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width 
     margin: auto;
   }
   .cards-container {
-    @include column-count(2);
-    .card {
-      z-index: 5;
-    }
+    -webkit-column-count: 2; /* Chrome, Safari, Opera */
+    -moz-column-count: 2; /* Firefox */
+    column-count: 2;
   }
 }
+
 @media #{$large-and-up} {
   .container {
     width: 60%;
@@ -307,15 +297,8 @@ $medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width 
     margin: auto;
   }
   .cards-container {
-    @include column-count(3);
-    .card {
-      z-index: 5;
-    }
+    -webkit-column-count: 3; /* Chrome, Safari, Opera */
+    -moz-column-count: 3; /* Firefox */
+    column-count: 3;
   }
-}
-
-
-/// Styles for demo
-.text-center {
-  text-align: center;
 }
