--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
         <img src="/assets/img/logo_ua_party.svg" style="height: 150px; padding: 30px 0 35px 75px; margin-bottom: -30px;" alt="logo uaparty oficial">
         <li style="padding-left: 25px;"><a href="{{ site.baseurl }}/" class="blue-text margena-kendu">Novedades</a></li>
         <li style="padding-left: 25px;"><a href="/calendario/" class="blue-text margena-kendu">Calendario</a></li>
+        <li style="padding-left: 25px;"><a href="/sobre_nosotros/" class="blue-text margena-kendu">Sobre Nosotros</a></li>
         {% for page in site.pages %}
             {% if page.title %}
                 <li style="padding-left: 25px;"><a href="{{ page.url | prepend: site.baseurl }}" class="blue-text margena-kendu">{{ page.title }}</a></li>
