Fixed icon issue

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -251,11 +251,12 @@ footer.page-footer {
 // Google Icons /////////////////////////
 /////////////////////////////////////////
 
+
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: url(https://example.com/MaterialIcons-Regular.eot); // For IE6-8
   src: local('Material Icons'),
        local('MaterialIcons-Regular'),
        url({{ site.url }}/assets/fonts/materialicons/MaterialIcons-Regular.woff2) format('woff2'),
@@ -267,7 +268,7 @@ footer.page-footer {
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
+  font-size: 24px;  // Preferred icon size
   display: inline-block;
   line-height: 1;
   text-transform: none;
@@ -276,15 +277,15 @@ footer.page-footer {
   white-space: nowrap;
   direction: ltr;
 
-  /* Support for all WebKit browsers. */
+  // Support for all WebKit browsers.
   -webkit-font-smoothing: antialiased;
-  /* Support for Safari and Chrome. */
+  // Support for Safari and Chrome.
   text-rendering: optimizeLegibility;
 
-  /* Support for Firefox. */
+  // Support for Firefox.
   -moz-osx-font-smoothing: grayscale;
 
-  /* Support for IE. */
+  // Support for IE.
   font-feature-settings: 'liga';
 }
 
